<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluetooth"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity" >
     
     <TextView
        android:id="@+id/Space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="" />
       
    <Button
        android:id="@+id/TempButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Space"
        android:layout_alignBottom="@+id/RoomTempEditView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/room_temp_"
        android:enabled="false"/>

    <EditText
        android:id="@+id/RoomTempEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Space"
        android:layout_toEndOf="@id/TempButton"
        android:layout_toRightOf="@id/TempButton"
        android:inputType="number"/>
    
     <TextView
        android:id="@+id/Space1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TempButton"
        android:textSize="20sp"
        android:text="" />

    <Button
        android:layout_width="172dp"

        android:layout_height="wrap_content"
        android:layout_below="@id/Space1"
        android:layout_alignBottom="@+id/Light1OFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/light_1_on"
        android:id="@+id/Light1ON"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/Space1"
        android:text="@string/light_1_off"
        android:layout_toEndOf="@+id/Light1ON"
        android:layout_toRightOf="@+id/Light1ON"
        android:layout_alignParentRight="true"
        android:id="@+id/Light1OFF"
        android:enabled="false"/>

    <Button
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Light1ON"
        android:text="@string/light_2_on"
        android:layout_alignBottom="@+id/Light2OFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Light2ON"
        android:enabled="false"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Light1OFF"
        android:text="@string/light_2_off"
        android:layout_toEndOf="@+id/Light2ON"
        android:layout_toRightOf="@+id/Light2ON"
        android:layout_alignParentRight="true"
        android:id="@+id/Light2OFF"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/Scan"
        android:id="@+id/btn_scan"/>

</RelativeLayout>